--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,20 +13,22 @@ bind-key l select-pane -R
 set-option -g status-position top
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'egel/tmux-gruvbox'
+# set -g @plugin 'catppuccin/tmux'
 
 # True color settings
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
 
-run '~/.tmux/plugins/tmux/catppuccin.tmux'
+# color theme
+set -g @tmux-gruvbox 'dark'
 
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+# set -g @catppuccin_window_status_style "rounded"
+# run '~/.tmux/plugins/tmux/catppuccin.tmux'
+# set -g status-right-length 100
+# set -g status-left-length 100
+# set -g status-left ""
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
 
 run '~/.tmux/plugins/tpm/tpm'
