--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,24 +11,21 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 set-option -g status-position top
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'egel/tmux-gruvbox'
-# set -g @plugin 'catppuccin/tmux'
-
 # True color settings
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
 
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'egel/tmux-gruvbox'
 # color theme
 set -g @tmux-gruvbox 'dark'
 
-# set -g @catppuccin_window_status_style "rounded"
-# run '~/.tmux/plugins/tmux/catppuccin.tmux'
-# set -g status-right-length 100
-# set -g status-left-length 100
-# set -g status-left ""
-# set -g status-right "#{E:@catppuccin_status_application}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
+set -g @vim_navigator_mapping_right "C-Right C-l"
+set -g @vim_navigator_mapping_up "C-k"
+set -g @vim_navigator_mapping_down "C-j"
+set -g @vim_navigator_mapping_prev ""  # removes the C-\ binding
 
 run '~/.tmux/plugins/tpm/tpm'
